--- a/project1/report/proj1_report.tex
+++ b/project1/report/proj1_report.tex
@@ -44,4 +44,19 @@ methods.
  
 \section{other section}
 This is not our report.
+
+
+
+\section{Regularized logistic regression}
+We implement cross-validation to optimize the values of $\lambda$ and $\gamma$. 
+$\lambda$ takes values $\{1,10,100,1000,10000\}$ and $\gamma$ takes values $\{10^{-6},10^{-7},10^{-8},10^{-9}\}$. 
+Taking bigger values for $\gamma$ results in the loss taking value $nan$. 
+You can see the test error plotted against $\lambda$ in \ref{fig:raw_reg_log_regr}, 
+each line corresponds to a value of $\gamma$.
+
+\begin{figure}[h!]
+  \includegraphics[width=\linewidth]{plots/raw_data_reg_log_regr.png}
+  \caption{Regularized logistic regression - HP optimization}
+  \label{fig:raw_reg_log_regr}
+\end{figure}
 \end{document}
