update Least squares

--- a/project1/report/proj1_report.tex
+++ b/project1/report/proj1_report.tex
@@ -76,7 +76,9 @@ Then we run the regularized logistic regression algorithm on the whole training 
 \end{document}
 
 \section{Least squares}
-Samuel
+This method is the simplest to implement but does not
+provide us robust results. With a score of 37\% on
+AICrowd, this is worse than tossing a coin.
 
 \section{Least squares gradient descent}
 To test the efficiency of \textit{least\_squares\_GD} on our dataset, which we standardize, we use cross-validation with five sets to train the hyperparameter $\gamma$.
