--- a/project1/report/proj1_report.tex
+++ b/project1/report/proj1_report.tex
@@ -132,8 +132,13 @@ values for $\gamma$ results in the loss taking value $nan$. You can see the test
   w_initial_raw = [0.0, 0.0, ..., 0.0]
 \end{lstlisting}
 
-This outputs the values for $\lambda$ and $\gamma$
-that minimize the test error. These values are: 
+This outputs the values for $\lambda$ and $\gamma$ that minimize the test error. These values are:
+\begin{align*}
+  \lambda &= 10 \\
+  \gamma &= 10^{-6}
+\end{align*}
+Then we run the regularized logistic regression algorithm on the whole training with these two values but with $max\_iters = 30000$ to obtain a good $w$ vector.
+
 \begin{figure}[h!]
   \includegraphics[width=\linewidth]{plots/raw_data_reg_log_regr.png}
   \caption{Regularized logistic regression - HP optimization}
