--- a/project1/report/proj1_report.tex
+++ b/project1/report/proj1_report.tex
@@ -42,38 +42,6 @@ methods.
   \item logistic\_regression
   \item reg\_logistic\_regression
 \end{itemize}
- 
-\section{other section}
-This is not our report.
-
-
-
-\section{Regularized logistic regression}
-We implement cross-validation to optimize the values of $\lambda$ and $\gamma$. 
-$\lambda$ takes values $\{1,10,100,1000,10000\}$ and $\gamma$ takes values $\{10^{-6},10^{-7},10^{-8},10^{-9}\}$. 
-Taking bigger values for $\gamma$ results in the loss taking value $nan$. 
-You can see the test error plotted against $\lambda$ in \ref{fig:raw_reg_log_regr}, 
-each line corresponds to a value of $\gamma$.
-Other parameters are:
-\begin{lstlisting}
-  max_iters = 3000
-  k_fold = 3
-  w_initial_raw = [0.0, 0.0, ..., 0.0]
-\end{lstlisting}
-This outputs the values for $\lambda$ and $\gamma$ that minimize the test error. These values are:
-\begin{align*}
-  \lambda &= 10 \\
-  \gamma &= 10^{-6}
-\end{align*}
-Then we run the regularized logistic regression algorithm on the whole training with these two values but with $max\_iters = 30000$ to obtain a good $w$ vector.
-
-
-\begin{figure}[h!]
-  \includegraphics[width=\linewidth]{plots/raw_data_reg_log_regr.png}
-  \caption{Regularized logistic regression - HP optimization}
-  \label{fig:raw_reg_log_regr}
-\end{figure}
-\end{document}
 
 \section{Least squares}
 This method is the simplest to implement but does not
@@ -142,7 +110,7 @@ This outputs the values for $\lambda$ and $\gamma$ that minimize the test error.
 Then we run the regularized logistic regression algorithm on the whole training with these two values but with $max\_iters = 30000$ to obtain a good $w$ vector.
 
 \begin{figure}[h!]
-  \includegraphics[width=\linewidth]{plots/raw_data_reg_log_regr.png}
+  \includegraphics[width=0.5\linewidth]{plots/raw_data_reg_log_regr.png}
   \caption{Regularized logistic regression - HP optimization}
   \label{fig:raw_reg_log_regr}
 \end{figure}
