Include clean for lsgd and log reg

--- a/project1/report/proj1_report.tex
+++ b/project1/report/proj1_report.tex
@@ -43,32 +43,53 @@ methods.
   \item reg\_logistic\_regression
 \end{itemize}
 
+\section{Cleaning the data}
+To clean the data, we remove the features
+that contain $-999.0$ from the training and testing sets. 
+Since they are the same features in both sets, 
+the weights can be trained and used for testing in the same way.
+
 \section{Least squares}
 This method is the simplest to implement but does not
 provide us robust results. With a score of 37\% on
 AICrowd, this is worse than tossing a coin.
 
 \section{Least squares gradient descent}
-To test the efficiency of \textit{least\_squares\_GD} on our dataset, which we standardize, we use cross-validation with five sets to train the hyperparameter $\gamma$.
-In figure~\ref{fig:lsgd}, you can observe how fast the cross-validation test error is growing when you change gamma from $0.08$ to $0.09$ but in order to have a more useful representation of the progression of the error, you can take a look at figure~\ref{fig:lsgd_useful}, which omits the error corresponding to $\gamma = 0.09$.
-For the initial weights chosen, they are first all initialized to $0.5$. We then modify the initial weights it to be closer to the final weights we got. Surprisingly, $0.4$ gives a better accuracy result on AICrowd ($69.7\%$) than $0.0$ ($69.3\%$) which is closer to the final weights in general and ouputs a smaller loss.
-For the number of iterations, $200$ and $1000$ converge almost to the same loss so to be more efficient, we choose $200$.
-Our best submission with \textit{least\_squares\_GD} has an accuracy of $69.7\%$ and has, as hyperparameters,
-\begin{itemize}
-  \item max\_iters = 200
-  \item k\_fold = 5
-  \item initial\_weights = np.array([0.4 for i in range(tX\_stdrzed.shape[1])])
-  \item gamma = 0.08
-\end{itemize}
+To test the efficiency of \textit{least\_squares\_GD} on our dataset, 
+which we standardize, we use cross-validation with five sets 
+to train the hyperparameter $\gamma$.
+In figure~\ref{fig:lsgd}, 
+you can observe how fast the cross-validation test error is growing 
+when you change gamma from $0.08$ to $0.09$ 
+but in order to have a more useful representation of the progression of the error, 
+you can take a look at the "raw" plot in figure~\ref{fig:raw_clean}, 
+which omits the error corresponding to $\gamma = 0.09$.
+The red plot represents the error depending on gamma with the data cleaned.
+For the initial weights chosen, they are first all initialized to $0.5$. 
+We then modify the initial weights it to be closer to the final weights we got. 
+Surprisingly, $0.4$ gives a better accuracy result on AICrowd ($69.7\%$) 
+than $0.0$ ($69.3\%$) which is closer to the final weights 
+in general and ouputs a smaller loss.
+For the number of iterations, $200$ and $1000$ converge almost to the same loss 
+so to be more efficient, we choose $200$.
+Our best submission with \textit{least\_squares\_GD} using raw data 
+has an accuracy of $69.7\%$ and has, as hyperparameters,
+\begin{lstlisting}
+  max_iters = 200
+  k_fold = 5
+  initial_weights = [0.4, 0.4, ..., 0.4]
+  gamma = 0.08
+\end{lstlisting}
+With cleaned data, the best submission has $72\%$ and use $\gamma = 0.12$.
 
-\begin{figure}[h]
-  \includegraphics[width=0.4\textwidth]{raw_data_least_squares_GD.png}
+\begin{figure}
+  \includegraphics[width=0.4\textwidth]{plots/raw_data_least_squares_GD.png}
   \label{fig:lsgd}
 \end{figure}
 
-\begin{figure}[h]
-  \includegraphics[width=0.4\textwidth]{raw_data_least_squares_GD_useful.png}
-    \label{fig:lsgd_useful}
+\begin{figure}
+  \includegraphics[width=0.4\textwidth]{plots/raw_vs_clean_lsgd.png}
+    \label{fig:raw_clean_lsgd}
 \end{figure}
 
 \section{Ridge regression}
@@ -79,23 +100,25 @@ We also used cross-validation to test the efficiency of
 \textit{logistic\_regression} on our standardized dataset.
 We use five sets to set the hyperparameter $\gamma$.
 For the initial weights chosen, they are all initialized to $0.5$ since $0.0, 0.1, ..., 0.6$ do not change the loss a lot but worsen the accuracy on AICrowd.
-Our best submission with \textit{logistic\_regression} had an accuracy of $73.9\%$ and had 
+Our best submission with \textit{logistic\_regression} using raw data had an accuracy of $73.9\%$ and had 
 \begin{lstlisting}
   max_iters = 1000
   k_fold = 5
   initial_weights = [0.5, 0.5, ..., 0.5]
   gamma = 1e-06
 \end{lstlisting}
+With cleaned data, the best submission has $72.7\%$ and use $\gamma = 1e-06$.
 
-\begin{figure}[h]
-  \includegraphics[width=0.4\textwidth]{raw_data_logistic_regression.png}
-    \label{fig:log_reg}
+\begin{figure}
+  \includegraphics[width=0.4\textwidth]{plots/raw_vs_clean_log_reg.png}
+  \label{fig:raw_clean_log_reg}
 \end{figure}
+
 
 \section{Regularized logistic regression}
 We implement cross-validation to optimize the values of $\lambda$ and $\gamma$. $\lambda$ takes values
 $\{1,10,100,1000,10000\}$ and $\gamma$ takes values $\{10^{-6},10^{-7},10^{-8},10^{-9}\}$. Taking bigger
-values for $\gamma$ results in the loss taking value $nan$. You can see the test error plotted against $\lambda$ in \ref{fig:raw_reg_log_regr}, each line corresponds to a value of $\gamma$. Other parameters are: 
+values for $\gamma$ results in the loss taking value $nan$. You can see the test error plotted against $\lambda$ in figure \ref{fig:raw_reg_log_regr}, each line corresponds to a value of $\gamma$. Other parameters are: 
 \begin{lstlisting}
   max_iters = 3000
   k_fold = 3
