Change figure ref and caption

--- a/project1/report/proj1_report.tex
+++ b/project1/report/proj1_report.tex
@@ -110,9 +110,11 @@ Our best submission with \textit{logistic\_regression} using raw data had an acc
   gamma = 1e-06
 \end{lstlisting}
 With cleaned data, the best submission has $72.7\%$ and use $\gamma = 1e-06$.
+You can observe both in figure \ref{fig:raw_clean_log_reg}.
 
 \begin{figure}
   \includegraphics[width=0.4\textwidth]{plots/raw_vs_clean_log_reg.png}
+  \caption{Raw vs cleaned data for logistic regression}
   \label{fig:raw_clean_log_reg}
 \end{figure}
 
