--- a/project1/report/proj1_report.tex
+++ b/project1/report/proj1_report.tex
@@ -127,7 +127,7 @@ You can observe both in figure \ref{fig:raw_clean_log_reg}.
   \label{fig:raw_clean_log_reg}
 \end{figure}
 
-
+\newpage
 \section{Regularized logistic regression}
 We implement cross-validation to optimize the values of $\lambda$ and $\gamma$. $\lambda$ takes values
 $\{1,10,100,1000,10000\}$ and $\gamma$ takes values $\{10^{-6},10^{-7},10^{-8},10^{-9}\}$. Taking bigger
