--- a/project1/report/proj1_report.tex
+++ b/project1/report/proj1_report.tex
@@ -4,6 +4,7 @@
 \usepackage{listings}
 \usepackage{amsmath,amsfonts,amssymb}
 \usepackage{geometry}
+\setlist[itemize]{noitemsep}
  \geometry{
  left=20mm,
  right=20mm,
@@ -151,3 +152,4 @@ Then we run the regularized logistic regression algorithm on the whole training 
 \end{figure}
 
 \end{document}
+
