--- a/project1/report/proj1_report.tex
+++ b/project1/report/proj1_report.tex
@@ -4,7 +4,6 @@
 \usepackage{listings}
 \usepackage{amsmath,amsfonts,amssymb}
 \usepackage{geometry}
-\setlist[itemize]{noitemsep}
  \geometry{
  left=20mm,
  right=20mm,
@@ -45,6 +44,9 @@ least\_squares\_SGD we already use. Finally, we assess the following
 methods:
 
 \begin{itemize}
+  \setlength{\itemsep}{1pt}
+  \setlength{\parskip}{0pt}
+  \setlength{\parsep}{0pt}
   \item least\_squares
   \item least\_squares\_GD 
   \item ridge\_regression
