--- a/project1/report/proj1_report.tex
+++ b/project1/report/proj1_report.tex
@@ -40,7 +40,7 @@ tweak hyperparameters and check their effectiveness using cross-validation.
 We do not use least\_squares\_SGD because we do not want
 to trade precision for time. We consider
 that it would provide us results close to
-least\_squares\_SGD we already use. Finally, we assess the following
+least\_squares\_GD we already use. Finally, we assess the following
 methods:
 
 \begin{itemize}
