--- a/project1/report/proj1_report.tex
+++ b/project1/report/proj1_report.tex
@@ -155,7 +155,7 @@ You can observe both in figure \ref{fig:raw_clean_log_reg}.
 \section{Regularized logistic regression}
 We implement cross-validation to optimize the values of $\lambda$ and $\gamma$. $\lambda$ takes values
 $\{1,10,100,1000,10000\}$ and $\gamma$ takes values $\{10^{-6},10^{-7},10^{-8},10^{-9}\}$. Taking bigger
-values for $\gamma$ results in the loss taking value $nan$. You can see the test error plotted against $\lambda$ in figure \ref{fig:raw_reg_log_regr}, each line corresponds to a value of $\gamma$. Other parameters are: 
+values for $\gamma$ results in the loss taking value $nan$. You can see the test error plotted against $\lambda$ in figure \ref{fig:raw_reg_log_regr}. Other parameters are: 
 \begin{lstlisting}
   max_iters = 3000
   k_fold = 3
@@ -164,9 +164,9 @@ values for $\gamma$ results in the loss taking value $nan$. You can see the test
 
 This outputs the values for $\lambda$ and $\gamma$ that minimize the test error. These values are:
 $\lambda = 10$ and $\gamma = 10^{-6}$.\\
-Then we run the regularized logistic regression algorithm on the whole training with these two values but with $max\_iters = 30000$ to obtain a good $w$ vector.
+Then we run the regularized logistic regression algorithm on the whole training set with these two values for hyper parameters but with $max\_iters = 30000$ to obtain a good $w$ vector.
 
-The best score on AICrowd achieved using this technique on raw data is 73.7\%. Using cleaned data we achieve 72.5\%.
+The best score on AICrowd achieved using this technique on raw data is 73.7\%. Using cleaned data, we achieve 72.5\%.
 \begin{figure}[h!]
   \includegraphics[width=\linewidth]{plots/raw_data_reg_log_regr.png}
   \caption{Regularized logistic regression - HP optimization}
